# ROS

ex01/: .bashrc  ex01.txt
ex03/aokunev/share/aokunev/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ex04/: colcon_build.txt
ex05/: rosnode_info.txt  rosnode_list.txt
ex06/: cmd_vel.txt
ex07/: parameter_server.txt
ex08/: rqt_console.csv  three_turtles.launch.py
ex09/: CMakeLists.txt  package.xml
ex09/srv/: FullNameSumService.srv
ex10/: package.xml  setup.py
ex10/ex10/: text_to_cmd_vel.py
